--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -57,6 +57,13 @@
 			<version>1.18.42</version>
 			<scope>provided</scope>
 		</dependency>
+
+        <!-- Shared module dependency -->
+        <dependency>
+            <groupId>com.mutrapro</groupId>
+            <artifactId>shared</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
 	<build>
