Create Profile for all service with dev and production

--- a/backend/payment-service/src/main/resources/application.yml
+++ b/backend/payment-service/src/main/resources/application.yml
@@ -1,3 +1,5 @@
 spring:
   application:
-    name: =payment-service
+    name: payment-service
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}
