--- a/env.example
+++ b/env.example
@@ -4,6 +4,7 @@ DB_PORT=5432
 DB_NAME=mutrapro
 DB_USER=mutrapro_user
 DB_PASSWORD=mutrapro_password
+SPRING_PROFILES_ACTIVE=dev
 
 # Redis Configuration
 REDIS_HOST=localhost
