--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.2",
     "antd": "^5.27.3",
     "bootstrap": "^5.3.8",
+    "flat-embed": "^2.5.1",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
