--- a/backend/auth-service/src/main/resources/application-prod.yml
+++ b/backend/auth-service/src/main/resources/application-prod.yml
@@ -8,14 +8,10 @@ spring:
     url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: validate
     show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
   sql:
     init:
@@ -28,4 +24,8 @@ logging:
 # JWT settings
 jwt:
   signerKey: ${JWT_SIGNER_KEY}
+
+verification:
+  email-otp:
+    expiry-seconds: 600
 
