--- a/backend/feedback-service/src/main/resources/application-dev.yml
+++ b/backend/feedback-service/src/main/resources/application-dev.yml
@@ -8,14 +8,10 @@ spring:
     url: jdbc:postgresql://localhost:5432/feedback_service
     username: postgres
     password: postgres
-    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
     open-in-view: false
   sql:
     init:
