Add securityConfig to shared and create authenticationEntryPoint and accessDeniedHandler

--- a/backend/user-service/src/main/resources/application-prod.yml
+++ b/backend/user-service/src/main/resources/application-prod.yml
@@ -21,3 +21,7 @@ logging:
   level:
     root: INFO
 
+# JWT Configuration - Must match auth-service signerKey
+jwt:
+  signerKey: ${JWT_SIGNER_KEY}
+
