--- a/backend/specialist-service/src/main/resources/application-prod.yml
+++ b/backend/specialist-service/src/main/resources/application-prod.yml
@@ -20,3 +20,7 @@ logging:
   level:
     root: INFO
 
+# JWT Configuration - Must match auth-service signerKey
+jwt:
+  signerKey: ${JWT_SIGNER_KEY}
+
