--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "@mui/material": "^7.3.2",
     "antd": "^5.27.3",
     "bootstrap": "^5.3.8",
+    "dayjs": "^1.11.18",
     "flat-embed": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
