--- a/backend/identity-service/pom.xml
+++ b/backend/identity-service/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.5</version>
+		<version>3.5.7</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mutrapro</groupId>
 	<artifactId>identity-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>identity-service</name>
-	<description>MuTraPro Identity Service - User Authentication & Authorization</description>
+	<description>MuTraPro Identity Service - User Authentication, Authorization</description>
 	<url />
 	<licenses>
 		<license />
@@ -92,13 +92,19 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- Shared module dependency -->
-		<dependency>
-			<groupId>com.mutrapro</groupId>
-			<artifactId>shared</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-	</dependencies>
+	<!-- Shared module dependency -->
+	<dependency>
+		<groupId>com.mutrapro</groupId>
+		<artifactId>shared</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+
+	<!-- Redis dependencies -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-redis</artifactId>
+	</dependency>
+</dependencies>
 
 	<build>
 		<plugins>
