--- a/backend/project-service/pom.xml
+++ b/backend/project-service/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.5</version>
+		<version>3.5.7</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mutrapro</groupId>
 	<artifactId>project-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>project-service</name>
-	<description>MuTraPro Project Service - Contract, Task, Revision & File Management</description>
+	<description>MuTraPro Project Service - Contract, Task, Revision, File Management</description>
 	<url />
 	<licenses>
 		<license />
