--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "wavesurfer.js": "^7.11.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
