--- a/backend/api-gateway/src/main/resources/application-prod.yml
+++ b/backend/api-gateway/src/main/resources/application-prod.yml
@@ -10,8 +10,9 @@ management:
 spring:
   data:
     redis:
-      host: ${SPRING_REDIS_HOST:redis}
-      port: ${SPRING_REDIS_PORT:6379}
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
   cloud:
     gateway:
       default-filters:
