--- a/backend/identity-service/src/main/resources/application-prod.yml
+++ b/backend/identity-service/src/main/resources/application-prod.yml
@@ -18,15 +18,10 @@ spring:
       mode: never
   data:
     redis:
-      host: ${REDIS_HOST:redis}
-      port: ${REDIS_PORT:6379}
-      password: ${REDIS_PASSWORD:}
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
       timeout: 3000ms
-      lettuce:
-        pool:
-          max-active: 8
-          max-idle: 8
-          min-idle: 0
 
 logging:
   level:
