--- a/backend/studio-service/src/main/resources/application-dev.yml
+++ b/backend/studio-service/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8080
+  port: 8087
   servlet:
     context-path: 
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/studio_service
+    url: jdbc:postgresql://shuttle.proxy.rlwy.net:29634/railway
     username: postgres
-    password: postgres
+    password: ToYAkDrNXuvNsxpdFhOryNVGEaifYcRw
   jpa:
     hibernate:
       ddl-auto: update
