--- a/backend/identity-service/src/main/resources/application-dev.yml
+++ b/backend/identity-service/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8080
+  port: 8081
   servlet:
     context-path: 
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/identity_service
+    url: jdbc:postgresql://trolley.proxy.rlwy.net:19324/railway
     username: postgres
-    password: postgres
+    password: beywrjIGcwFtmwRKIlgUPUHayisTmIlx
   jpa:
     hibernate:
       ddl-auto: update
