--- a/backend/identity-service/src/main/resources/application-prod.yml
+++ b/backend/identity-service/src/main/resources/application-prod.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8080
+  port: 8081
   servlet:
     context-path: 
 
 spring:
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/identity_service}
-    username: ${DATABASE_USERNAME:postgres}
-    password: ${DATABASE_PASSWORD:postgres}
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: validate
