--- a/backend/request-service/src/main/resources/application-prod.yml
+++ b/backend/request-service/src/main/resources/application-prod.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8085
+  port: 8084
   servlet:
     context-path: 
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/request_db_prod
-    username: postgres
-    password: postgres
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: validate
