--- a/backend/identity-service/pom.xml
+++ b/backend/identity-service/pom.xml
@@ -104,6 +104,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-redis</artifactId>
 	</dependency>
+
+	<!-- Springdoc OpenAPI 3 for Swagger -->
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.8.13</version>
+	</dependency>
 </dependencies>
 
 	<build>
