--- a/backend/notification-service/pom.xml
+++ b/backend/notification-service/pom.xml
@@ -87,6 +87,13 @@
 			<artifactId>shared</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<!-- Springdoc OpenAPI 3 for Swagger -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.13</version>
+		</dependency>
 	</dependencies>
 
 	<build>
