--- a/backend/notification-service/pom.xml
+++ b/backend/notification-service/pom.xml
@@ -88,13 +88,24 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
-		<!-- Springdoc OpenAPI 3 for Swagger -->
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.13</version>
-		</dependency>
-	</dependencies>
+	<!-- Springdoc OpenAPI 3 for Swagger -->
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	</dependency>
+
+	<!-- Spring Boot Mail -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-mail</artifactId>
+	</dependency>
+
+	<!-- Spring Kafka -->
+	<dependency>
+		<groupId>org.springframework.kafka</groupId>
+		<artifactId>spring-kafka</artifactId>
+	</dependency>
+</dependencies>
 
 	<build>
 		<plugins>
