--- a/backend/identity-service/pom.xml
+++ b/backend/identity-service/pom.xml
@@ -109,7 +109,8 @@
 	<dependency>
 		<groupId>org.springdoc</groupId>
 		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-	</dependency>
+    <version>2.8.13</version>
+    </dependency>
 
 	<!-- Spring Kafka -->
 	<dependency>
