--- a/backend/notification-service/pom.xml
+++ b/backend/notification-service/pom.xml
@@ -92,7 +92,8 @@
 	<dependency>
 		<groupId>org.springdoc</groupId>
 		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-	</dependency>
+    <version>2.8.13</version>
+    </dependency>
 
 	<!-- Spring Boot Mail -->
 	<dependency>
