Implement password reset: add forgot/reset endpoints, extend UsersAuth with reset token, update EmailService/config, and adjust ResetPasswordPage for email/token.

--- a/backend/identity-service/src/main/resources/application-prod.yml
+++ b/backend/identity-service/src/main/resources/application-prod.yml
@@ -44,6 +44,8 @@ jwt:
 verification:
   email-otp:
     expiry-seconds: 900
+  password-reset:
+    expiry-hours: 24
 
 app:
   outbox:
@@ -51,3 +53,4 @@ app:
   event-topics:
     mappings:
       email.verification: email-verification
+      password.reset: password-reset
