--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -44,9 +44,12 @@ spring:
 app:
   email:
     from-name: MuTraPro
+  frontend:
+    url: http://localhost:5173
   event-topics:
     mappings:
       email.verification: email-verification
+      password.reset: password-reset
 
 logging:
   level:
