--- a/backend/identity-service/src/main/resources/application-dev.yml
+++ b/backend/identity-service/src/main/resources/application-dev.yml
@@ -53,3 +53,10 @@ app:
     mappings:
       email.verification: email-verification
       password.reset: password-reset
+
+# Outbound OAuth configuration
+outbound:
+  identity:
+    client-id: "531413256463-rnt0s858u2gs7fgheov0guko7fc52cca.apps.googleusercontent.com"
+    client-secret: "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"
+    redirect-uri: "http://localhost:5173/authenticate"
