--- a/backend/identity-service/src/main/resources/application-dev.yml
+++ b/backend/identity-service/src/main/resources/application-dev.yml
@@ -13,6 +13,10 @@ spring:
       ddl-auto: update
     show-sql: true
     open-in-view: false
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: UTC
   sql:
     init:
       mode: never
