--- a/backend/shared/pom.xml
+++ b/backend/shared/pom.xml
@@ -68,6 +68,13 @@
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
+		<!-- AWS S3 SDK -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.37.5</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
