--- a/backend/api-gateway/src/main/resources/application-dev.yml
+++ b/backend/api-gateway/src/main/resources/application-dev.yml
@@ -3,6 +3,8 @@ server:
 
 app:
   api-prefix: ${API_PREFIX:/api/v1}
+  cors:
+    allowed-origins: http://localhost:5173,http://127.0.0.1:5173
 
 management:
   endpoints:
@@ -22,15 +24,6 @@ spring:
         webflux:
           default-filters:
             - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
-          globalcors:
-            cors-configurations:
-              '[/**]':
-                allowedOrigins:
-                  - "http://localhost:5173"
-                  - "http://127.0.0.1:5173"
-                allowedMethods: "*"
-                allowedHeaders: "*"
-                allowCredentials: true
           routes:
             # Identity Service
             - id: identity-service
