--- a/backend/project-service/pom.xml
+++ b/backend/project-service/pom.xml
@@ -95,6 +95,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+		<!-- Spring Kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 		<!-- Springdoc OpenAPI 3 for Swagger -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
