--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@stomp/stompjs": "^7.2.1",
     "antd": "^5.27.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.3.8",
@@ -28,6 +29,7 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2",
+    "sockjs-client": "^1.6.1",
     "wavesurfer.js": "^7.11.1",
     "zustand": "^5.0.8"
   },
