Add feign client to call Identity Service and Project Service to get detail request and fix show detail minute

--- a/backend/request-service/src/main/resources/application-dev.yml
+++ b/backend/request-service/src/main/resources/application-dev.yml
@@ -64,3 +64,13 @@ app:
     mappings:
       file.uploaded: file-uploaded
       request.assigned: request-events
+
+# Project Service Configuration
+project:
+  service:
+    base-url: http://localhost:8082
+
+# Identity Service Configuration
+identity:
+  service:
+    base-url: http://localhost:8081
