--- a/backend/request-service/src/main/resources/application-prod.yml
+++ b/backend/request-service/src/main/resources/application-prod.yml
@@ -64,3 +64,13 @@ app:
     mappings:
       file.uploaded: file-uploaded
       request.assigned: request-events
+
+# Project Service Configuration
+project:
+  service:
+    base-url: ${PROJECT_SERVICE_BASE_URL:http://project-service:8082}
+
+# Identity Service Configuration
+identity:
+  service:
+    base-url: ${IDENTITY_SERVICE_BASE_URL:http://identity-service:8081}
