Create Contract API and Fix Page Contract Create With Request Only. Create WebSocket Auth to add token to auth and create WebSocketAuthInterceptor in shared;

--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -45,3 +45,8 @@ app:
   event-topics:
     mappings:
       file.uploaded: file-uploaded
+
+# Request Service Configuration
+request:
+  service:
+    base-url: http://localhost:8084
