Add system message functionality in ChatMessageController and ChatMessageService; implement contract approval, change request, and cancellation features in ContractService and related components.

--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -50,3 +50,8 @@ app:
 request:
   service:
     base-url: http://localhost:8084
+
+# Chat Service Configuration
+chat:
+  service:
+    base-url: http://localhost:8088
