feat: enhance contract status & UI; notify on contract actions; add NotificationController.create; refactor NotificationType to shared enums

--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -55,3 +55,8 @@ request:
 chat:
   service:
     base-url: http://localhost:8088
+
+# Notification Service Configuration
+notification:
+  service:
+    base-url: http://localhost:8086
