--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -54,6 +54,8 @@ app:
     mappings:
       email.verification: email-verification
       password.reset: password-reset
+      contract.otp-email: contract-otp-email
+      contract.signed-email: contract-signed-email
 
 logging:
   level:
