--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "sockjs-client": "^1.6.1",
     "wavesurfer.js": "^7.11.1",
     "zustand": "^5.0.8"
