Sync contract dates with deposit payment and refine status notifications

--- a/backend/chat-service/src/main/resources/application-prod.yaml
+++ b/backend/chat-service/src/main/resources/application-prod.yaml
@@ -49,6 +49,10 @@ spring:
       enable-auto-commit: false
       properties:
         spring.json.trusted.packages: "*"
+        
+notification:
+  service:
+    base-url: ${NOTIFICATION_SERVICE_BASE_URL}
 
 logging:
   level:
