--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -47,6 +47,7 @@ app:
       file.uploaded: file-uploaded
       contract.otp-email: contract-otp-email
       contract.signed-email: contract-signed-email
+      billing.deposit-paid: billing-deposit-paid
 
 # Request Service Configuration
 request:
