--- a/backend/billing-service/src/main/resources/application-dev.yml
+++ b/backend/billing-service/src/main/resources/application-dev.yml
@@ -42,4 +42,5 @@ jwt:
 app:
   event-topics:
     mappings:
-      billing.deposit-paid: billing-deposit-paid
+      # billing.deposit-paid: billing-deposit-paid  # Deprecated - đã chuyển sang billing.milestone-paid
+      billing.milestone-paid: billing-milestone-paid
