feat: implement task reassignment for specialists and managers
- Add reassign request/decision endpoints
- Extend TaskAssignment model/response
- Update frontend UI and API services

--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -70,6 +70,11 @@ billing:
   service:
     base-url: http://localhost:8083
 
+# Specialist Service Configuration
+specialist:
+  service:
+    base-url: http://localhost:8086
+
 # AWS S3 Configuration
 aws:
   s3:
