--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -66,6 +66,11 @@ notification:
   service:
     base-url: ${NOTIFICATION_SERVICE_URL:http://notification-service:8085}
 
+# Specialist Service Configuration
+specialist:
+  service:
+    base-url: ${SPECIALIST_SERVICE_URL:http://specialist-service:8086}
+
 # AWS S3 Configuration
 aws:
   s3:
