fix otp verify email

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,7 +15,10 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.2",
     "expo": "~54.0.25",
+    "expo-auth-session": "^7.0.9",
+    "expo-crypto": "^15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "^15.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.20.2",
