feat: update event topic mappings and enhance chat room access control
- Removed deprecated comments from event topic mappings in application-dev.yml and application-prod.yml for clarity.
- Enhanced ChatRoomService to allow SYSTEM_ADMIN role access to any chat room, improving system message handling.
- Added a method to retrieve the current user's role from the JWT token for better role management.

--- a/backend/billing-service/src/main/resources/application-dev.yml
+++ b/backend/billing-service/src/main/resources/application-dev.yml
@@ -42,5 +42,5 @@ jwt:
 app:
   event-topics:
     mappings:
-      # billing.deposit-paid: billing-deposit-paid  # Deprecated - đã chuyển sang billing.milestone-paid
+      billing.deposit-paid: billing-deposit-paid
       billing.milestone-paid: billing-milestone-paid
