feat: add task assignment notification functionality
- Implemented a new method in NotificationService to create notifications when a specialist is assigned a new task, triggered by a Kafka event.
- Enhanced TaskAssignmentService to enqueue TaskAssignmentAssignedEvent for notifying specialists about new task assignments.
- Updated application configuration files to include task assignment notification settings for both development and production environments.
- Added a new notification type for task assignments in the NotificationType enum.

--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -56,6 +56,7 @@ app:
       password.reset: password-reset
       contract.otp-email: contract-otp-email
       contract.signed-email: contract-signed-email
+      task.assignment.assigned: task-assignment-assigned
 
 logging:
   level:
