--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -49,6 +49,7 @@ app:
       contract.signed-email: contract-signed-email
       billing.deposit-paid: billing-deposit-paid
       billing.milestone-paid: billing-milestone-paid
+      task.assignment.assigned: task-assignment-assigned
 
 # Request Service Configuration
 request:
