--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -45,6 +45,7 @@ app:
       contract.signed-email: ${KAFKA_TOPIC_CONTRACT_SIGNED_EMAIL:contract-signed-email}
       billing.deposit-paid: ${KAFKA_TOPIC_BILLING_DEPOSIT_PAID:billing-deposit-paid}
       billing.milestone-paid: ${KAFKA_TOPIC_BILLING_MILESTONE_PAID:billing-milestone-paid}
+      task.assignment.assigned: ${KAFKA_TOPIC_TASK_ASSIGNMENT_ASSIGNED:task-assignment-assigned}
 
 # Request Service Configuration
 request:
