refactor: update event type naming conventions and add task file upload notification
- Changed event type naming from "billing.deposit-paid" to "billing.deposit.paid" and "billing.milestone-paid" to "billing.milestone.paid" for consistency.
- Updated application configuration files to reflect new event type names.
- Introduced a new notification for task file uploads, including a method in NotificationService to create notifications for managers when specialists upload files.
- Enhanced FileService to enqueue task file upload events for notifications, improving communication regarding file uploads.

--- a/backend/chat-service/src/main/resources/application.yaml
+++ b/backend/chat-service/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ app:
   event-topics:
     mappings:
       request.assigned: request-events
-      chat.room-created: chat-events
+      chat.room.created: chat-events
 
 # Springdoc OpenAPI
 springdoc:
