--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -45,11 +45,12 @@ app:
   event-topics:
     mappings:
       file.uploaded: file-uploaded
-      contract.otp-email: contract-otp-email
-      contract.signed-email: contract-signed-email
-      billing.deposit-paid: billing-deposit-paid
-      billing.milestone-paid: billing-milestone-paid
+      contract.otp.email: contract-otp-email
+      contract.signed.email: contract-signed-email
+      billing.deposit.paid: billing-deposit-paid
+      billing.milestone.paid: billing-milestone-paid
       task.assignment.assigned: task-assignment-assigned
+      task.file.uploaded: task-file-uploaded
 
 # Request Service Configuration
 request:
